Thu Jun 21 02:46:01 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Add "spell1" - a simple feature test for spelling
	  based on Richard's python test.  Use TESTCASE() and END_OF_TESTCASES
	  macros.

Wed Jun 20 21:57:01 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: WritableDatabase::delete_document()
	  no longer cancels pending changes if the document doesn't exist.
	* backends/quartz/quartz_database.cc: Same fix.

Wed Jun 20 20:53:52 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: We may now need to flush even if
	  there have been no documents added/replaced/deleted, as there may be
	  changes to the spelling table.

Wed Jun 20 20:46:30 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc: Fix a function name in the debug
	  loggging.

Wed Jun 20 20:39:43 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_spelling.cc: Fix FlintSpellingTermList not to
	  report at_end() one entry too early.

Wed Jun 20 19:21:45 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc: Don't touch <dbdir>/log for flint
	  as flint doesn't create a log like quartz does.

Wed Jun 20 17:10:29 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc,backends/flint/flint_spelling.h:
	  Push special handling for spelling_table into the FlintSpellingTable
	  class.  This fixes "is_modified()" to take into account unflushed
	  changes held in memory.

Wed Jun 20 13:59:01 BST 2007  Olly Betts <olly@survex.com>

	* api/omdatabase.cc: Don't use RETURN() in methods which return void.

Wed Jun 20 11:56:30 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/editdistance.cc: Change an Assert in is_transposed() (which
	  fails in some cases) to a test, since it seems legitimate that
	  a value of pos2 <= 0 might be supplied to the function (though
	  the answer will always be "false" in that case).
