@@ -1,3 +1,10 @@
+Thu Jun 21 03:18:28 BST 2007  Olly Betts <olly@survex.com>
+
+	* tests/queryparsertest.cc: Some doubles in the list which
+	  value_range_serialise1 tests have the same values on some platforms,
+	  so test that adjacent numbers and their string counterparts compare
+	  the same way rather than that both are "<".
+
 Thu Jun 21 02:46:01 BST 2007  Olly Betts <olly@survex.com>
 
 	* tests/api_wrdb.cc: Add "spell1" - a simple feature test for spelling
